# image-to-svg

./: AGENTS.md  CLAUDE.md  constraint_solver.py  example_usage.py  geometry_detector.py  geometry_primitives.py  image_to_svg.py  math_config.py  math_semantic_analyzer.py  mathematical_ocr.py  precise_math_svg_converter.py  precise_svg_generator.py  pyproject.toml  quick_test.py  requirements.txt  test_framework.py  test_geometry_only.py  validate_conversion.py  精确数学配图SVG转换系统重设计方案.md
.claude/: settings.local.json
