[project]
name = "imagetosvg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "autopy>=4.0.1",
    "easyocr>=1.7.2",
    "networkx>=3.5",
    "numpy>=2",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "svgwrite>=1.4.3",
    "tesseract>=0.1.3",
]
